[package]
name = "club_cooee_trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.6"
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0.124"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-rustls = "0.26.0"
rustls = "0.23.12"
mongodb = "3.0.1"
futures = "0.3.30"
dotenvy = "0.15.7"
colored = "2.0"
hostname = "0.4.0"
webpki-roots = "0.26.3"
base64 = "0.22.1"
url = "2.5.2"
chrono = "0.4.38"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.66", features = ["vendored"] }
aws-lc-rs = { version = "1", features = ["bindgen"] }